<resources>
    <!-- INTER-INTENT COMMUNICATION - ! DON'T LOCALISE !-->
    <string name="PLACE_TO_VISIT_TITLE">tim.project.travellerapp.PLACE_TO_VISIT_TITLE</string>
    <string name="PLACE_TO_VISIT_LOCALISATION">tim.project.travellerapp.PLACE_TO_VISIT_LOCALISATION</string>
    <string name="ADD_NEW_PLACE_LATITUDE">tim.project.travellerapp.ADD_NEW_PLACE_LATITUDE</string>
    <string name="ADD_NEW_PLACE_LONGITUDE">tim.project.travellerapp.ADD_NEW_PLACE_LONGITUDE</string>


    <string name="app_name">Traveller</string>
    <string name="places_to_visit_toolbar">My places to visit</string>
    <string name="visited_places_toolbar">My visited places</string>

    <!-- Login -->
    <string name="login_hint">login</string>
    <string name="password_hint">password</string>
    <string name="signin_button">Sign In</string>
    <string name="signup_link">Register</string>

    <string name="login_correct">Logged in successfully!</string>
    <string name="login_empty">You need to enter login and password!</string>
    <string name="login_wrong_credentials">Wrong username or password!</string>

    <!-- Register -->
    <string name="register_login_hint">login</string>
    <string name="register_password_hint">password</string>
    <string name="register_repassword_hint">confirm password</string>
    <string name="register_title">Registration</string>
    <string name="back_button">Back</string>

    <string name="user_duplicate">Username taken!</string>
    <string name="user_created">User created successfully!</string>

    <!-- Main -->

    <string name="add_new_place_button">Add new place</string>
    <string name="to_visit_button">Places to visit</string>
    <string name="visited_button">Show my visited places</string>
    <string name="show_on_map_button">Show all places on map</string>

    <!--Places to visit -->
    <string name="action_visited">Mark as visited</string>
    <string name="action_delete">Remove</string>


    <!--Visited Places -->
    <string name="visited_places_date_description">Visit date:</string>

    <string name="action_add_photo_visited">Add photo</string>
    <string name="action_clear_history_visited">Clear history</string>


    <!--Add new place-->
    <string name="title_activity_add_new_place_maps">Add new place</string>
    <string name="title_activity_to_visit_maps">Places to visit</string>
    <string name="add_new_place_toolbar_title">Add new place</string>
    <string name="add_new_place_name_hint">Name</string>
    <string name="add_new_place_address_hint">Street</string>
    <string name="add_new_place_city_hint">City</string>
    <string name="add_new_place_description_hint">Description</string>
    <string name="add_new_place_add_button">Add</string>

    <!--Settings-->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="succesfull_logout">Logged out successfully!</string>

    <string name="settings_change_traveling_method_title">Choose travelling method</string>

    <string-array name="travelling_method_keys">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Walking</item>
    </string-array>
    <string-array name="travelling_method_values">
        <item>d</item>
        <item>b</item>
        <item>w</item>
    </string-array>

    <string name="settings_user_category">Account settings</string>
    <string name="settings_general_category">General settings</string>

    <string name="settings_change_password_title">Change password</string>
    <string name="settings_delete_account_title">Delete account</string>

    <string name="setting_old_password_hint">Old password</string>
    <string name="setting_new_password_hint">New password</string>
    <string name="setting_new2_password_hint">Confirm new password</string>

    <string name="settings_passwords_differ">Entered passwords are different!</string>

    <string name="preference_title_change_password">Change password</string>
    <string name="settings_password_changed">Password changed successfully!</string>
    <string name="settings_password_not_changed">Old password invalid!</string>

    <string name="cancel_button">Cancel</string>

    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="ok_string">Ok</string>

    <string name="delete_account_message">Are you sure? (This action is not reversible!)</string>

    <string name="about_title">About</string>
    <string name="about_information">Aplikacja mobilna "Traveller" na zaliczenie projektu z TIM. \n\nWykonał Damian Tchoń I7B3S4</string>

    <string name="empty_name_information">Name cannot be empty!</string>
    <string name="empty_adress_information">Address and city cannot be empty!</string>
    <string name="latitude_information">Latitude must be between -90 and 90!</string>
    <string name="longitude_information">Longitude must be between -180 and 180!</string>

    <string name="new_place_added_succesfully">New place added successfully!</string>

    <string name="no_server_connection">No server connection!</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="history_cleared_successfully">History cleared successfully!</string>
    <string name="no_history_to_clear">History is alreade clear!</string>

    <string name="select_action">Select action</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="select_from_camera">Capture photo with camera</string>


    <string name="photo_uploaded_successfully">Photo updated successfully</string>


    <string name="visited_exclemation">odwiedzony !</string>

    <string name="accept_photo_title">Accept image</string>
</resources>
