<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/password_old"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/setting_old_password_hint"
        android:backgroundTint="@color/colorAccent"/>
    <EditText
        android:id="@+id/password_new"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/setting_new_password_hint"
        android:backgroundTint="@color/colorAccent"/>
    <EditText
        android:id="@+id/password_new2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/setting_new2_password_hint"
        android:backgroundTint="@color/colorAccent"/>
</LinearLayout>